fixed bottom text spacing

--- a/style.css
+++ b/style.css
@@ -113,5 +113,5 @@ h1 {
 }
 
 .bottom-line {
-  top: 79%;
+  bottom: 2%;
 }
